# fastapi-tdd-docker

./: .gitignore  .pyproject.toml.swp  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  release.sh
.github/workflows/: main.yml
app/: config.py  main.py
backend/: .coverage  .flake8  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: crud.py  hello_router.py  summaries.py
backend/app/models/: __init__.py  pydantic.py  text_summary.py
backend/tests/: conftest.py  test_hello.py  test_summaries.py  test_summaries_unit.py
