[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]==0.8.2",
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "pydantic-settings==2.8.1",
    "tortoise-orm==0.25.0",
    "uvicorn==0.34.1",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.5",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
